# assistant-ai

./: README.md  settings.gradle.kts
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/cpp/llama.cpp/: .gitignore  CMakeLists.txt  README.md
app/src/main/cpp/llama.cpp/common/: arg.cpp  common.cpp  common.h  log.h  ngram-cache.h  sampling.h  speculative.h
app/src/main/cpp/llama.cpp/docs/: build.md
app/src/main/cpp/llama.cpp/examples/batched/: batched.cpp
app/src/main/cpp/llama.cpp/examples/convert-llama2c-to-ggml/: convert-llama2c-to-ggml.cpp
app/src/main/cpp/llama.cpp/examples/diffusion/: diffusion-cli.cpp
app/src/main/cpp/llama.cpp/examples/embedding/: embedding.cpp
app/src/main/cpp/llama.cpp/examples/eval-callback/: eval-callback.cpp
app/src/main/cpp/llama.cpp/examples/gen-docs/: gen-docs.cpp
app/src/main/cpp/llama.cpp/examples/gguf/: gguf.cpp
app/src/main/cpp/llama.cpp/examples/gguf-hash/: gguf-hash.cpp
app/src/main/cpp/llama.cpp/examples/gritlm/: gritlm.cpp
app/src/main/cpp/llama.cpp/examples/lookahead/: lookahead.cpp
app/src/main/cpp/llama.cpp/examples/lookup/: lookup-create.cpp  lookup-merge.cpp  lookup-stats.cpp  lookup.cpp
app/src/main/cpp/llama.cpp/examples/parallel/: parallel.cpp
app/src/main/cpp/llama.cpp/examples/passkey/: passkey.cpp
app/src/main/cpp/llama.cpp/examples/retrieval/: retrieval.cpp
app/src/main/cpp/llama.cpp/examples/save-load-state/: save-load-state.cpp
app/src/main/cpp/llama.cpp/examples/simple/: simple.cpp
app/src/main/cpp/llama.cpp/examples/simple-chat/: simple-chat.cpp
app/src/main/cpp/llama.cpp/examples/speculative/: speculative.cpp
app/src/main/cpp/llama.cpp/examples/speculative-simple/: speculative-simple.cpp
app/src/main/cpp/llama.cpp/examples/sycl/: ls-sycl-device.cpp
app/src/main/cpp/llama.cpp/examples/training/: finetune.cpp
app/src/main/cpp/llama.cpp/ggml/: CMakeLists.txt
app/src/main/cpp/llama.cpp/ggml/src/: CMakeLists.txt  ggml-alloc.c  ggml-backend-impl.h  ggml-backend-reg.cpp  ggml-backend.cpp  ggml-impl.h  ggml-opt.cpp  ggml-quants.c  ggml-quants.h  ggml.c
app/src/main/cpp/llama.cpp/ggml/src/ggml-blas/: ggml-blas.cpp
app/src/main/cpp/llama.cpp/ggml/src/ggml-cann/: aclnn_ops.cpp  common.h  ggml-cann.cpp
app/src/main/cpp/llama.cpp/ggml/src/ggml-cpu/: common.h  ggml-cpu-impl.h  ggml-cpu.c  ggml-cpu.cpp  ops.cpp  ops.h  quants.c  quants.h  repack.cpp  repack.h  traits.cpp  traits.h  vec.h
app/src/main/cpp/llama.cpp/ggml/src/ggml-cpu/amx/: amx.cpp
app/src/main/cpp/llama.cpp/ggml/src/ggml-cpu/arch/arm/: cpu-feats.cpp  quants.c  repack.cpp
app/src/main/cpp/llama.cpp/ggml/src/ggml-cpu/arch/loongarch/: quants.c
app/src/main/cpp/llama.cpp/ggml/src/ggml-cpu/arch/powerpc/: quants.c
app/src/main/cpp/llama.cpp/ggml/src/ggml-cpu/arch/riscv/: quants.c  repack.cpp
app/src/main/cpp/llama.cpp/ggml/src/ggml-cpu/arch/s390/: quants.c
app/src/main/cpp/llama.cpp/ggml/src/ggml-cpu/kleidiai/: kernels.h  kleidiai.cpp
app/src/main/cpp/llama.cpp/ggml/src/ggml-cpu/llamafile/: sgemm.cpp
app/src/main/cpp/llama.cpp/ggml/src/ggml-cuda/: common.cuh  cpy-utils.cuh  ggml-cuda.cu  mmv.cu  softmax.cu
app/src/main/cpp/llama.cpp/ggml/src/ggml-cuda/vendors/: cuda.h  musa.h
app/src/main/cpp/llama.cpp/ggml/src/ggml-metal/: CMakeLists.txt  ggml-metal.m  ggml-metal.metal
app/src/main/cpp/llama.cpp/ggml/src/ggml-musa/: CMakeLists.txt
app/src/main/cpp/llama.cpp/ggml/src/ggml-opencl/: CMakeLists.txt  ggml-opencl.cpp
app/src/main/cpp/llama.cpp/ggml/src/ggml-rpc/: ggml-rpc.cpp
app/src/main/cpp/llama.cpp/ggml/src/ggml-sycl/: binbcast.cpp  common.hpp  cpy.cpp  element_wise.cpp  element_wise.hpp  getrows.cpp  ggml-sycl.cpp  im2col.cpp  mmvq.cpp  norm.cpp  quants.hpp  rope.cpp  vecdotq.hpp
app/src/main/cpp/llama.cpp/ggml/src/ggml-sycl/dpct/: helper.hpp
app/src/main/cpp/llama.cpp/ggml/src/ggml-webgpu/: CMakeLists.txt  ggml-webgpu.cpp
app/src/main/cpp/llama.cpp/include/: llama.h
app/src/main/cpp/llama.cpp/src/: CMakeLists.txt  llama-adapter.h  llama-arch.h  llama-batch.h  llama-chat.cpp  llama-context.h  llama-cparams.h  llama-grammar.h  llama-hparams.cpp  llama-hparams.h  llama-impl.cpp  llama-impl.h  llama-kv-cells.h  llama-memory.h  llama-mmap.cpp  llama-model-loader.cpp  llama-model-loader.h  llama-model-saver.cpp  llama-model.h  llama-sampling.h  llama-vocab.cpp  llama-vocab.h  llama.cpp
app/src/main/cpp/llama.cpp/tests/: CMakeLists.txt  test-arg-parser.cpp  test-autorelease.cpp  test-barrier.cpp  test-c.c  test-chat-parser.cpp  test-chat-template.cpp  test-chat.cpp  test-gguf.cpp  test-grammar-integration.cpp  test-grammar-llguidance.cpp  test-grammar-parser.cpp  test-json-partial.cpp  test-json-schema-to-grammar.cpp  test-llama-grammar.cpp  test-log.cpp  test-model-load-cancel.cpp  test-mtmd-c-api.c  test-opt.cpp  test-quantize-fns.cpp  test-quantize-perf.cpp  test-quantize-stats.cpp  test-regex-partial.cpp  test-rope.cpp  test-sampling.cpp  test-thread-safety.cpp  test-tokenizer-0.cpp  test-tokenizer-1-bpe.cpp  test-tokenizer-1-spm.cpp
app/src/main/cpp/llama.cpp/tools/batched-bench/: batched-bench.cpp
app/src/main/cpp/llama.cpp/tools/cvector-generator/: cvector-generator.cpp  mean.hpp  pca.hpp
app/src/main/cpp/llama.cpp/tools/export-lora/: export-lora.cpp
app/src/main/cpp/llama.cpp/tools/gguf-split/: gguf-split.cpp
app/src/main/cpp/llama.cpp/tools/imatrix/: imatrix.cpp
app/src/main/cpp/llama.cpp/tools/llama-bench/: llama-bench.cpp
app/src/main/cpp/llama.cpp/tools/main/: main.cpp
app/src/main/cpp/llama.cpp/tools/mtmd/: CMakeLists.txt  clip-impl.h  clip.cpp  clip.h  mtmd-audio.h  mtmd-cli.cpp  mtmd-helper.cpp  mtmd-helper.h  mtmd.cpp  mtmd.h
app/src/main/cpp/llama.cpp/tools/perplexity/: perplexity.cpp
app/src/main/cpp/llama.cpp/tools/quantize/: quantize.cpp
app/src/main/cpp/llama.cpp/tools/rpc/: rpc-server.cpp
app/src/main/cpp/llama.cpp/tools/run/: run.cpp
app/src/main/cpp/llama.cpp/tools/server/: CMakeLists.txt  README.md  server.cpp  utils.hpp
app/src/main/cpp/llama.cpp/tools/tokenize/: tokenize.cpp
app/src/main/cpp/llama.cpp/tools/tts/: tts.cpp
(+73 files in other folders)
